# code-indexer

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
.claude/skills/code-indexer/: INP.py  SKILL.md
indexer/: __init__.py  cli.py  core.py  db.py  models.py
indexer/analyzers/: arch_detector.py  call_graph.py  summary.py
indexer/detectors/: detector.py
indexer/ida_plugin/: INP.py
indexer/parsers/: apk_parser.py  elf_parser.py  ida_parser.py  source_parser.py
indexer/utils/: progress.py
