[project]
name = "code-indexer"
version = "0.1.0"
description = "AI-friendly panoramic code index generator for source code, .so, and .apk files"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-java>=0.23",
    "lief>=0.14",
    "pyelftools>=0.31",
    "androguard>=4.1",
    "capstone>=5.0",
]

[project.scripts]
code-indexer = "indexer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["indexer*"]
